refactor(global): 코딩 컨벤션 적용